--- a/core/templates/cotton/layout/app.html
+++ b/core/templates/cotton/layout/app.html
@@ -2,10 +2,14 @@
 	<c-slot name="header">
 		<c-components.header />
 	</c-slot>
-	<main  class="container-content">
-		<div class="content">
-		{{ slot }}
-		</div>
+	<main  class="w-full lg:ps-64">
+		<div class="p-4 sm:p-6 space-y-4 sm:space-y-6">
+
+			<!-- Start Content Here -->
+			{{slot}}
+			<!-- End Content -->
+			
+		  </div>
 	</main>
 	<c-slot name="footer">
 	</c-slot>
