--- a/core/templates/cotton/layout/base.html
+++ b/core/templates/cotton/layout/base.html
@@ -8,12 +8,13 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
 
   {% component "favicon" %}{% endcomponent %}
   
   {% component_css_dependencies %}
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-50">
 
   {{ slot }}
 
