--- a/components/header/sidebar.html
+++ b/components/header/sidebar.html
@@ -12,7 +12,7 @@
     <div class="relative flex flex-col h-full max-h-full">
       <div class="px-6 pt-4">
         <!-- Logo -->
-        <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="#" aria-label="Preline">
+        <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="{% url 'main' %}" aria-label="Preline">
           <img src="{% static 'brand/dwhite-light-rev-2.png' %}" class="w-28 h-auto" alt="Dwhite Official" width="116" height="32">
         </a>
         <!-- End Logo -->
