--- a/core/templates/cotton/libs/timeline/show.html
+++ b/core/templates/cotton/libs/timeline/show.html
@@ -1,6 +1,18 @@
 <c-libs.timeline.base>
     <c-libs.timeline.card>
         <c-slot name="title">
+            **Version 0.1.4**
+        </c-slot>
+        <c-slot name="date">
+            Juni 2024
+        </c-slot>
+        <c-slot name="content">
+            Update, Edit & Add
+        </c-slot>
+        <c-libs.timeline.item>fix Bug Layout Header</c-libs.timeline.item>
+    </c-libs.timeline.card>
+    <c-libs.timeline.card>
+        <c-slot name="title">
             **Version 0.1.3**
         </c-slot>
         <c-slot name="date">
@@ -10,9 +22,6 @@
             Update, Edit & Add
         </c-slot>
         <c-libs.timeline.item>fix Bug Layout</c-libs.timeline.item>
-
-
-       
     </c-libs.timeline.card>
     
     <c-libs.timeline.card>
