--- a/core/templates/cotton/auth/base.html
+++ b/core/templates/cotton/auth/base.html
@@ -1,4 +1,4 @@
-<div class="flex h-full items-center py-16 dark:bg-neutral-800">
+<div class="flex h-full items-center dark:bg-neutral-800">
     <main class="w-full max-w-md mx-auto p-6">
         {{ slot }}
     </main>
