--- a/core/templates/cotton/libs/timeline/show.html
+++ b/core/templates/cotton/libs/timeline/show.html
@@ -4,7 +4,7 @@
             **Version 0.1.4**
         </c-slot>
         <c-slot name="date">
-            Juni 2024
+            Agustus 2024
         </c-slot>
         <c-slot name="content">
             Update, Edit & Add
